Bug 33131 - [4.2 regression] libgomp/env.c:60: warning: implicit declaration of function 'strncasecmp'
Summary: [4.2 regression] libgomp/env.c:60: warning: implicit declaration of function ...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libgomp (show other bugs)
Version: 4.2.1
: P2 normal
Target Milestone: 4.4.0
Assignee: Not yet assigned to anyone
URL:
Keywords: openmp
Depends on:
Blocks:
 
Reported: 2007-08-21 03:23 UTC by Daniel Richard G.
Modified: 2009-04-29 15:13 UTC (History)
3 users (show)

See Also:
Host: powerpc-ibm-aix4.3.3.0
Target: powerpc-ibm-aix4.3.3.0
Build: powerpc-ibm-aix4.3.3.0
Known to work:
Known to fail:
Last reconfirmed:


Attachments
patch to include string.h and strings.h (stolen from libcpp) (356 bytes, patch)
2008-02-22 20:23 UTC, The Written Word
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Richard G. 2007-08-21 03:23:00 UTC
Build was successful after stripping out all the -Werror flags from the makefiles.

/tmp/gcc--4.2.1.build/./gcc/xgcc -B/tmp/gcc--4.2.1.build/./gcc/ -B/opt/tg/powerpc-ibm-aix4.3.3.0/bin/ -B/opt/tg/powerpc-ibm-aix4.3.3.0/lib/ -isystem /opt/tg/powerpc-ibm-aix4.3.3.0/include -isystem /opt/tg/powerpc-ibm-aix4.3.3.0/sys-include -DHAVE_CONFIG_H -I. -I/tg/freeport/src/gcc/gcc--4.2.1/libgomp -I. -I/tg/freeport/src/gcc/gcc--4.2.1/libgomp/config/posix -I/tg/freeport/src/gcc/gcc--4.2.1/libgomp -Wall -pthread -Werror -O2 -g -O2 -c /tg/freeport/src/gcc/gcc--4.2.1/libgomp/env.c   -DPIC -o env.o
cc1: warnings being treated as errors
/tg/freeport/src/gcc/gcc--4.2.1/libgomp/env.c: In function 'parse_schedule':
/tg/freeport/src/gcc/gcc--4.2.1/libgomp/env.c:60: warning: implicit declaration of function 'strncasecmp'
gmake[4]: *** [env.lo] Error 1
gmake[4]: Leaving directory `/tmp/gcc--4.2.1.build/powerpc-ibm-aix4.3.3.0/libgomp'
gmake[3]: *** [all-recursive] Error 1
gmake[3]: Leaving directory `/tmp/gcc--4.2.1.build/powerpc-ibm-aix4.3.3.0/libgomp'
gmake[2]: *** [all] Error 2
gmake[2]: Leaving directory `/tmp/gcc--4.2.1.build/powerpc-ibm-aix4.3.3.0/libgomp'
gmake[1]: *** [all-target-libgomp] Error 2
gmake[1]: Leaving directory `/tmp/gcc--4.2.1.build'
gmake: *** [bootstrap-lean] Error 2
Comment 1 Mark Mitchell 2007-10-09 19:21:44 UTC
Change target milestone to 4.2.3, as 4.2.2 has been released.
Comment 2 Joseph S. Myers 2008-02-01 16:54:42 UTC
4.2.3 is being released now, changing milestones of open bugs to 4.2.4.
Comment 3 The Written Word 2008-02-22 20:23:08 UTC
Created attachment 15208 [details]
patch to include string.h and strings.h (stolen from libcpp)

Patch does not include generated files (configure, config.h.in)
Comment 4 The Written Word 2008-02-24 07:09:28 UTC
(In reply to comment #3)
> Created an attachment (id=15208) [edit]
> patch to include string.h and strings.h (stolen from libcpp)
> 
> Patch does not include generated files (configure, config.h.in)
> 

To elaborate, the attached patch fixes it for us because strncasecmp is declared in strings.h, which is not being included. At first we went with the unconditional inclusion of strings.h, but that seemed inappropriate, so we copied what was in libcpp for string.h and strings.h.
Comment 5 Ralf Wildenhues 2008-02-24 08:58:17 UTC
Patch looks ok to me (but I cannot approve it), can you please post it to
gcc-patches for review?
Comment 6 The Written Word 2008-02-25 18:55:14 UTC
(In reply to comment #5)
> Patch looks ok to me (but I cannot approve it), can you please post it to
> gcc-patches for review?
> 

http://gcc.gnu.org/ml/gcc-patches/2008-02/msg01193.html

Thanks.
Comment 7 Ralf Wildenhues 2008-03-03 22:35:54 UTC
Subject: Bug 33131

Author: rwild
Date: Mon Mar  3 22:35:13 2008
New Revision: 132844

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=132844
Log:
2008-03-03  Peter O'Gorman  <pogma@thewrittenword.com>

	PR libgomp/33131
	* configure.ac: Add ACX_HEADER_STRING.
	* env.c: Include strings.h.
	* aclocal.m4: Regenerate.
	* config.h.in: Regenerate.
	* configure: Regenerate.
	* Makefile.in: Regenerate.
	* testsuite/Makefile.in: Regenerate.

Modified:
    trunk/libgomp/ChangeLog
    trunk/libgomp/Makefile.in
    trunk/libgomp/aclocal.m4
    trunk/libgomp/config.h.in
    trunk/libgomp/configure
    trunk/libgomp/configure.ac
    trunk/libgomp/env.c
    trunk/libgomp/testsuite/Makefile.in

Comment 8 Joseph S. Myers 2008-05-19 20:23:24 UTC
4.2.4 is being released, changing milestones to 4.2.5.
Comment 9 Jakub Jelinek 2008-07-27 20:59:17 UTC
Fixed on the trunk.