libgomp/env.c
@@ -32,7 +32,18 @@
 #include "libgomp_f.h"
 #include <ctype.h>
 #include <stdlib.h>
-#include <string.h>
+#ifdef STRING_WITH_STRINGS
+# include <string.h>
+# include <strings.h>
+#else
+# ifdef HAVE_STRING_H
+#  include <string.h>
+# else
+#  ifdef HAVE_STRINGS_H
+#   include <strings.h>
+#  endif
+# endif
+#endif
 #include <limits.h>
 #include <errno.h>
 
